
Following types of entries are listed:

[!] Important change
[+] New functionality
[*] Changes in existing functionality
[-] Fixed error

Each entry might list referenced bug or people who helped with fixing
the issue.

ChangeLog
=========
    
2009???? - 1.25.93

[-] * Fixed reading of phonebook from Samsung (bug #980).
[-] * Add ID for Nokia 3390b (bug #982).
    
20090821 - 1.25.92

[+] * Reworked RPM packages (separate libraries and SMSD).
[-] * Huawei E160 uses encoded USSD requests.
[+] * Better support for messages on Motorola, thanks to Quintin Hill.
[-] * Fix reading of SMS backups without text (bug #963).
[-] * Send message even if SendingTimeOut is null (bug #977).
[-] * Disabled automatic OBEX for Motorola phones.
[!] * Increased limits for message length, bump soname to 7 because of
      this.
[!] * Changed SMSD tables to be able to handle longer messages from
      Motorola phones.
    
20090813 - 1.25.91

[+] * Documented most commands in man page.
[+] * Completed Czech translation of Gammu.
[-] * Avoid crash on some Nokia smses (bug #959).
[+] * Added support for Bluetooth on more BSD systems, thanks to Iain Hibbert.
[+] * Added new command setsmsc.
[+] * Added option to disable checking for battery and signal in SMSD.
    
20090730 - 1.25.90

[-] * Fixed getting firmware revision on AT phones (bug #951).
[+] * Added support for home/work mobile number (bug #952).
[-] * Fixed handling of error response for security status in AT.
[-] * Fixed segfault on systems with very low memory limits.
[!] * Development now goes on in Git repository, please check README.
[!] * 6510 driver now dynamically allocates memory for file caches, what
      reduces Gammu memory usage by 800 MiB.
[-] * Added testcases for AT+CNMI replies.
[-] * Fixed range parsing in AT engine.
[+] * Added reconnect support in PostgreSQL driver in SMSD.
[!] * Gammu debug level no longer can be controlled separately in SMSD.